--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "lib": [
         "es2015",
         "dom",
+        "es6",
+        "dom.iterable",
+        "scripthost",
     ],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     // "jsx": "preserve",                                /* Specify what JSX code is generated. */
     // "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
